--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<div ng-app ng-init="qty=1;cost=2">
+<div ng-app="invoice2" ng-controller="InvoiceController as invoice">
   <b>Invoice:</b>
   <div>
-    Quantity: <input type="number" min="0" ng-model="qty">
+    Quantity: <input type="number" min="0" ng-model="invoice.qty" required >
   </div>
   <div>
-    Costs: <input type="number" min="0" ng-model="cost">
+    Costs: <input type="number" min="0" ng-model="invoice.cost" required >
+    <select ng-model="invoice.inCurr">
+      <option ng-repeat="c in invoice.currencies">{{c}}</option>
+    </select>
   </div>
   <div>
-    <b>Total:</b> {{qty * cost | currency}}
+    <b>Total:</b>
+    <span ng-repeat="c in invoice.currencies">
+      {{invoice.total(c) | currency:c}}
+    </span>
+    <button class="btn" ng-click="invoice.pay()">Pay</button>
   </div>
 </div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+
+<script src="invoice2.js"></script>
+<script src="finance2.js"></script>
